--- a/scss/abstracts/_variables.scss
+++ b/scss/abstracts/_variables.scss
@@ -1,8 +1,8 @@
 /// Grid settings
 /// @type list
 $grid: (
-	'columns': 12,
-	'spacing': 1rem
+	columns: 12,
+	spacing: 1rem
 );
 
 /// Rem base in pixels
