--- a/scss/layout/_grid.scss
+++ b/scss/layout/_grid.scss
@@ -3,9 +3,9 @@
 	margin-right: auto;
 	overflow: hidden;
 	word-wrap: break-word;
-	@include rem(margin-bottom, map-get($grid, 'spacing'));
-	@include rem(padding-left, map-get($grid, 'spacing'));
-	@include rem(padding-right, map-get($grid, 'spacing'));
+	@include rem(margin-bottom, map-get($grid, spacing));
+	@include rem(padding-left, map-get($grid, spacing));
+	@include rem(padding-right, map-get($grid, spacing));
 }
 
 .container {
@@ -24,8 +24,8 @@
 	display: flex;
 	flex-wrap: wrap;
 	overflow: hidden;
-	@include rem(margin-left, (map-get($grid, 'spacing') * -1));
-	@include rem(margin-right, (map-get($grid, 'spacing') * -1));
+	@include rem(margin-left, (map-get($grid, spacing) * -1));
+	@include rem(margin-right, (map-get($grid, spacing) * -1));
 }
 
 %grid-column {
@@ -33,12 +33,12 @@
 	width: 100%;
 	min-height: 1px;
 	overflow: hidden;
-	@include rem(padding-left, map-get($grid, 'spacing'));
-	@include rem(padding-right, map-get($grid, 'spacing'));
+	@include rem(padding-left, map-get($grid, spacing));
+	@include rem(padding-right, map-get($grid, spacing));
 }
 
 @each $key, $value in $grid-breakpoints {
-	@for $column from 1 through map-get($grid, 'columns') {
+	@for $column from 1 through map-get($grid, columns) {
 		.col-#{$key}-#{$column} {
 			@extend %grid-column;
 		}
@@ -51,9 +51,9 @@
 
 	@if (parse-int($value) > 0) {
 		@include responsive(min-width, calc-rems($value, $rem-base)) {
-			@include grid-columns($key, map-get($grid, 'columns'));
+			@include grid-columns($key, map-get($grid, columns));
 		}
 	} @else {
-		@include grid-columns($key, map-get($grid, 'columns'));
+		@include grid-columns($key, map-get($grid, columns));
 	}
 }
